--- a/scss/bootstrap/_variables.scss
+++ b/scss/bootstrap/_variables.scss
@@ -39,7 +39,7 @@ $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
 $red:     #dc3545 !default;
-$orange:  #fd7e14 !default;
+$orange:  #4a8ee1 !default;
 $yellow:  #ffc107 !default;
 $green:   #71bc42 !default;
 $teal:    #20c997 !default;
